// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message Description 1`] = `
.c0 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  line-height: 0.875rem;
  font-size: 0.8125rem;
}

<p
  className="c0"
>
  Choosing deployment data center
</p>
`;

exports[`Message Message 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c5 {
  color: rgba(73,73,73,1);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
  border: 0.0625rem solid rgb(216,216,216);
  border-radius: 0.1875rem;
  width: 100%;
}

.c2:before,
.c2:after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
}

.c2:before {
  top: -0.4375rem;
  right: 1.0625rem;
  border-width: 0 0.34375rem 0.4375rem 0.34375rem;
  border-color: transparent transparent rgb(216,216,216) transparent;
}

.c2:after {
  top: -0.375rem;
  right: 1.125rem;
  border-width: 0 0.28125rem 0.375rem 0.28125rem;
  border-color: transparent transparent rgb(255,255,255) transparent;
}

.c3 {
  border-radius: 0.1875rem 0 0 0.1875rem;
  margin: -0.0625rem 0 -0.0625rem -0.0625rem;
  min-width: 0.75rem;
  min-height: 100%;
  background-color: rgb(0,152,88);
}

.c4 {
  padding: 1.125rem 1.125rem;
}

.c6 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  line-height: 0.875rem;
  font-size: 0.8125rem;
}

@media only screen and (min-width:48em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
      <div
        className="c4"
      >
        <h4
          className="c5"
        >
          Choosing deployment data center
        </h4>
        <p
          className="c6"
        >
          Not all data centres have all configurations of instances available. Make sure that you choose the data center that suits your requirements. Learn more
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message Message Error 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c5 {
  color: rgba(73,73,73,1);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
  border: 0.0625rem solid rgb(216,216,216);
  border-radius: 0.1875rem;
  width: 100%;
}

.c2:before,
.c2:after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
}

.c2:before {
  top: -0.4375rem;
  right: 1.0625rem;
  border-width: 0 0.34375rem 0.4375rem 0.34375rem;
  border-color: transparent transparent rgb(216,216,216) transparent;
}

.c2:after {
  top: -0.375rem;
  right: 1.125rem;
  border-width: 0 0.28125rem 0.375rem 0.28125rem;
  border-color: transparent transparent rgb(255,255,255) transparent;
}

.c3 {
  border-radius: 0.1875rem 0 0 0.1875rem;
  margin: -0.0625rem 0 -0.0625rem -0.0625rem;
  min-width: 0.75rem;
  min-height: 100%;
  background-color: rgb(0,152,88);
  background-color: rgb(210,67,58);
}

.c4 {
  padding: 1.125rem 1.125rem;
}

.c6 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  line-height: 0.875rem;
  font-size: 0.8125rem;
}

@media only screen and (min-width:48em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
      <div
        className="c4"
      >
        <h4
          className="c5"
        >
          Choosing deployment data center
        </h4>
        <p
          className="c6"
        >
          Not all data centres have all configurations of instances available. Make sure that you choose the data center that suits your requirements. Learn more
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message Message Warning 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c5 {
  color: rgba(73,73,73,1);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
  border: 0.0625rem solid rgb(216,216,216);
  border-radius: 0.1875rem;
  width: 100%;
}

.c2:before,
.c2:after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-style: solid;
}

.c2:before {
  top: -0.4375rem;
  right: 1.0625rem;
  border-width: 0 0.34375rem 0.4375rem 0.34375rem;
  border-color: transparent transparent rgb(216,216,216) transparent;
}

.c2:after {
  top: -0.375rem;
  right: 1.125rem;
  border-width: 0 0.28125rem 0.375rem 0.28125rem;
  border-color: transparent transparent rgb(255,255,255) transparent;
}

.c3 {
  border-radius: 0.1875rem 0 0 0.1875rem;
  margin: -0.0625rem 0 -0.0625rem -0.0625rem;
  min-width: 0.75rem;
  min-height: 100%;
  background-color: rgb(0,152,88);
  background-color: rgb(227,130,0);
}

.c4 {
  padding: 1.125rem 1.125rem;
}

.c6 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  line-height: 0.875rem;
  font-size: 0.8125rem;
}

@media only screen and (min-width:48em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
      <div
        className="c4"
      >
        <h4
          className="c5"
        >
          Choosing deployment data center
        </h4>
        <p
          className="c6"
        >
          Not all data centres have all configurations of instances available. Make sure that you choose the data center that suits your requirements. Learn more
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message Title 1`] = `
.c0 {
  color: rgba(73,73,73,1);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

<h4
  className="c0"
>
  Choosing deployment data center
</h4>
`;
